# live-wallpaper

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  gen_locale_files.sh  livewp-home-widget.desktop.in
data/: Makefile.am  Makefile.in  livewp.desktop  livewp.desktop.in  org.maemo.livewp.service
data/external_themes/: 100boxes.xml.disable  colorflood.xml  conky.xml  crazychikens.xml  fifteen.xml  flash.xml  liqflow.xml  orrery.xml.disable  xsnow2.xml
data/theme/: Без имени.xcf
data/theme/Conky/: conky.install
data/theme/Modern/: el.db
data/theme/Video/: icon.png_old  icond.png_old
debian/: changelog  control  copyright  hildon-timeout-home-widget-example.substvars  rules
po/: LINGUAS  POTFILES.in  es_ES.po  es_MX.po  fi_FI.po  it_IT.po  nl_NL.po  pl_PL.po  ru_RU.po
src/: Makefile.am  Makefile.in  config.h.in  fifteen.c  livewp-actor.c  livewp-actor.h  livewp-astro.c  livewp-astro.h  livewp-common.h  livewp-config.c  livewp-config.h  livewp-conky.c  livewp-conky.h  livewp-control-widget.c  livewp-control-widget.h  livewp-dbus.c  livewp-dbus.h  livewp-exthemes.c  livewp-exthemes.h  livewp-flash.c  livewp-flash.h  livewp-home-widget.c  livewp-home-widget.h  livewp-main.c  livewp-multiactor.c  livewp-multiactor.h  livewp-rules.c  livewp-rules.h  livewp-scene.c  livewp-scene.h  livewp-settings.c  livewp-settings.h
